fix 720p and 900p window param issue

--- a/src/client/resources/main.html
+++ b/src/client/resources/main.html
@@ -155,7 +155,7 @@
                 }
 
                 if (!serverUrlInput.value.length) {
-                    serverUrlInput.value = 'https://laochan.girlsband.party/preProcess/GetServices';
+                    serverUrlInput.value = 'https://laochan.impact.wang/';
                 }
 
                 if (!asioDevice.value.length) {
