--- a/src/client/resources/main.html
+++ b/src/client/resources/main.html
@@ -156,6 +156,15 @@
         .mb-3 {
             margin-bottom: 2em;
         }
+
+        h1, h4 {
+            padding: 0;
+            margin: 0.5rem 0;
+        }
+
+        #version-text {
+            opacity: 60%;
+        }
     </style>
 </head>
 
@@ -164,7 +173,8 @@
     <div class="wrapper">
         <div class="left">
             <h1>Infinitas Launcher</h1>
-            <h4>Powered by Laochan <small id="version-text"></small></h4>
+            <h4>Powered by Laochan</h4>
+            <small id="version-text">VERSION TEXT</small>
         </div>
         <div class="right">
             <div class="settings">
@@ -201,79 +211,81 @@
                     <button type="button" id="run">启动!</button>
                 </div>
             </div>
+        </div>
+    </div>
 
-            <script>
-                const serverUrlInput = document.querySelector('#serverUrl');
-                const tokenInput = document.querySelector('#token');
-                const displayModeInput = document.querySelector('#displayMode');
-                const soundModeInput = document.querySelector('#soundMode');
-                const asioDeviceInput = document.querySelector('#asioDevice');
-                const devbtn = document.querySelector('#devbtn');
-                const konamisettingsbtn = document.querySelector('#openSettingsbtn');
-                const run = document.querySelector('#run');
-                const asioSelector = document.querySelector('#asio-selector');
-                const versionText = document.querySelector('#version-text');
+    <script>
+        const serverUrlInput = document.querySelector('#serverUrl');
+        const tokenInput = document.querySelector('#token');
+        const displayModeInput = document.querySelector('#displayMode');
+        const soundModeInput = document.querySelector('#soundMode');
+        const asioDeviceInput = document.querySelector('#asioDevice');
+        const devbtn = document.querySelector('#devbtn');
+        const konamisettingsbtn = document.querySelector('#openSettingsbtn');
+        const run = document.querySelector('#run');
+        const asioSelector = document.querySelector('#asio-selector');
+        const versionText = document.querySelector('#version-text');
 
-                (async () => {
-                    const options = await getOptions() ?? {
-                        serverUrl: 'https://laochan.impact.wang/',
-                        token: await uuid(),
-                        displayMode: 3,
-                        soundMode: 0,
-                        asioDevice: 'XONAR SOUND CARD(64)',
-                    };
+        (async () => {
+            const options = await getOptions() ?? {
+                serverUrl: 'https://laochan.impact.wang/',
+                token: await uuid(),
+                displayMode: 3,
+                soundMode: 0,
+                asioDevice: 'XONAR SOUND CARD(64)',
+            };
 
-                    serverUrlInput.value = options.serverUrl;
-                    tokenInput.value = options.token;
-                    displayModeInput.selectedIndex = options.displayMode;
-                    soundModeInput.selectedIndex = options.soundMode;
-                    asioDeviceInput.value = options.asioDevice;
+            serverUrlInput.value = options.serverUrl;
+            tokenInput.value = options.token;
+            displayModeInput.selectedIndex = options.displayMode;
+            soundModeInput.selectedIndex = options.soundMode;
+            asioDeviceInput.value = options.asioDevice;
 
-                    versionText.innerHTML = await getVersion();
-                })();
+            versionText.innerHTML = await getVersion();
+        })();
 
-                soundModeInput.addEventListener('change', () => {
-                    if (soundModeInput.selectedIndex) {
-                        asioSelector.classList.remove("hide");
-                        return;
-                    }
+        soundModeInput.addEventListener('change', () => {
+            if (soundModeInput.selectedIndex) {
+                asioSelector.classList.remove("hide");
+                return;
+            }
 
-                    asioSelector.classList.add("hide");
-                });
+            asioSelector.classList.add("hide");
+        });
 
-                devbtn.addEventListener('click', () => {
-                    serverUrlInput.value = 'http://localhost:25730/preProcess/GetServices';
-                });
+        devbtn.addEventListener('click', () => {
+            serverUrlInput.value = 'http://localhost:25730/preProcess/GetServices';
+        });
 
-                konamisettingsbtn.addEventListener('click', () => {
-                    createSettingsProcess();
-                });
+        konamisettingsbtn.addEventListener('click', () => {
+            createSettingsProcess();
+        });
 
-                run.addEventListener('click', async () => {
-                    const settings = {
-                        serverUrl: serverUrlInput.value,
-                        token: tokenInput.value,
-                        displayMode: displayModeInput.selectedIndex,
-                        soundMode: soundModeInput.selectedIndex,
-                        asioDevice: asioDeviceInput.value,
-                    };
+        run.addEventListener('click', async () => {
+            const settings = {
+                serverUrl: serverUrlInput.value,
+                token: tokenInput.value,
+                displayMode: displayModeInput.selectedIndex,
+                soundMode: soundModeInput.selectedIndex,
+                asioDevice: asioDeviceInput.value,
+            };
 
-                    if (!settings.token.length) {
-                        tokenInput.value = uuid;
-                    }
+            if (!settings.token.length) {
+                tokenInput.value = uuid;
+            }
 
-                    if (!settings.serverUrl.length) {
-                        serverUrlInput.value = 'https://laochan.impact.wang/';
-                    }
+            if (!settings.serverUrl.length) {
+                serverUrlInput.value = 'https://laochan.impact.wang/';
+            }
 
-                    if (!settings.asioDevice.length) {
-                        asioDevice.value = 'XONAR SOUND CARD(64)';
-                    }
+            if (!settings.asioDevice.length) {
+                asioDevice.value = 'XONAR SOUND CARD(64)';
+            }
 
-                    await setOptions(settings);
-                    startGame();
-                });
-            </script>
+            await setOptions(settings);
+            startGame();
+        });
+    </script>
 </body>
 
 </html>
