--- a/src/client/resources/main.html
+++ b/src/client/resources/main.html
@@ -294,7 +294,7 @@
             };
 
             if (!settings.token.length) {
-                tokenInput.value = uuid;
+                tokenInput.value = await uuid();
             }
 
             if (!settings.serverUrl.length) {
